NEW261703
showPicker() method of input doesn't work on iOS
https://bugs.webkit.org/show_bug.cgi?id=261703
Summary showPicker() method of input doesn't work on iOS
Luke Warlow
Reported 2023-09-18 15:23:59 PDT
Visit https://demo.lukewarlow.dev/showPicker/ Click "color showPicker" button Nothing will happen. It should load the colour input like it does on desktop safari.
Attachments
Aditya Keerthi
Comment 1 2023-09-18 18:21:56 PDT
I don't believe we've implemented `showPicker()` for any controls on iOS. Though it would effectively be a wrapper around `focus()`, since native iOS pickers are tied to element focus.
Luke Warlow
Comment 2 2023-09-18 18:42:02 PDT
showPicker works for the iOS file input, but otherwise yeah nothing else works. But only file and colour are currently implemented on desktop.
Radar WebKit Bug Importer
Comment 3 2023-09-25 15:24:13 PDT
Luke Warlow
Comment 4 2023-10-01 16:05:55 PDT
See https://github.com/whatwg/html/issues/9757 for a HTML spec question regarding showPicker and focus
Luke Warlow
Comment 5 2023-10-02 05:42:48 PDT
Blocking this on the date and datalist implementations. That way we can fix iOS all in one go.
Luke Warlow
Comment 6 2023-10-02 06:13:42 PDT
Kellen Green
Comment 7 2025-10-28 23:48:30 PDT
Any progress on fixing the iOS testing to get this merged?
Note You need to log in before you can comment on or make changes to this bug.