Implement full showPicker() support on iOS https://bugs.webkit.org/show_bug.cgi?id=261703

Reviewed by NOBODY (OOPS!).

Currently only file input works with showPicker on iOS.
This patch expands that to all inputs with a picker UI.
It also adds support for select on iOS.
This is done by calling element()->focus() where needed.

* Source/WebCore/html/ColorInputType.cpp:
(WebCore::ColorInputType::showPicker):
* Source/WebCore/html/BaseDateAndTimeInputType.cpp:
(WebCore::BaseDateAndTimeInputType::showPicker):
* Source/WebCore/html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::showPicker):
* Source/WebCore/html/MonthInputType.cpp:
(WebCore::MonthInputType::showPicker):
* Source/WebCore/html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::showPicker):
* Source/WebCore/html/TimeInputType.cpp:
(WebCore::TimeInputType::showPicker):
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/fast/forms/datalist/datalist-show-picker.html:
* LayoutTests/fast/forms/date/date-show-picker.html:
* LayoutTests/fast/forms/datetimelocal/datetimelocal-show-picker.html:
* LayoutTests/fast/forms/ios/color-show-picker-expected.txt: Added.
* LayoutTests/fast/forms/ios/color-show-picker.html: Added.
* LayoutTests/fast/forms/select/select-show-picker.html:
* LayoutTests/platform/ios/TestExpectations: