Source/WebCore/html/ColorInputType.cpp
@@ -197,12 +197,16 @@ void ColorInputType::handleDOMActivateEvent(Event& event)
 
 void ColorInputType::showPicker() 
 {
+#if PLATFORM(IOS_FAMILY)
+    element()->focus();
+#else
     if (Chrome* chrome = this->chrome()) {
         if (!m_chooser)
             m_chooser = chrome->createColorChooser(*this, valueAsColor());
         else
             m_chooser->reattachColorChooser(valueAsColor());
     }
+#endif
 }
 
 bool ColorInputType::allowsShowPickerAcrossFrames()
